2004-03-08  Anders Carlsson  <andersca@gnome.org>

	* gtk/gtkfilechooserentry.c:
	(_gtk_file_chooser_entry_set_base_folder):
	Set the base folder path in the entry.
	
2004-03-08  Christian Neumair  <chris@gnome-de.org>

	* tests/testentrycompletion.c: Fix typo.

2004-03-08  Tor Lillqvist  <tml@iki.fi>

	* README.win32: Update.

	* gtk/gtk.def: Small update. Thanks to J. Ali Harlow. Re-sorted.

	* tests/testfilechooser.c: Correct localtime_r() emulation on
	Win32. Remove a couple of unnecessary Win32-only includes.

Mon Mar  8 01:06:17 2004  Matthias Clasen  <maclas@gmx.de>

	* tests/testentrycompletion.c: Test dynamic addition/removal. 

Sun Mar  7 22:38:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkframe.c (gtk_frame_paint): Use ythickness, not 
	xthickness in the calculation of vertical dimensions.

Sun Mar  7 17:38:03 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkbutton.c (gtk_button_class_init): actually use
	gtk_button_add.

	* gtk/gtkfilechooserdefault.c (error_building_filename_dialog):
	use the uri, not the path, #136317
	(renderer_edited_cb): ditto
	(shortcuts_add_bookmark_from_path): ditto
	(remove_bookmark_button_clicked_cb): ditto
	(gtk_file_chooser_default_remove_shortcut): ditto
	(update_from_entry): ditto
	(up_folder_handler): ditto

Sun Mar  7 16:07:08 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_init): set
	redraw_on_allocate, #135902.

	* gtk/gtkfilesystemmodel.c (model_refilter_recurse): Patch from
	Damon Chaplin to set a node to be visible before emitting the
	inserted signal, #135555.

Sun Mar  7 22:24:28 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkbutton.c (_gtk_button_paint): Don't use xthickness in the
	height calculation.

Sun Mar  7 14:34:04 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooserdefault.c (trap_activate_cb): stop activate
	from unselecting rows when pressed in multiple-selection mode.

2004-03-07  Hans Breuer  <hans@breuer.org>
