@@ -1,5 +1,11 @@
 2004-03-08  Anders Carlsson  <andersca@gnome.org>
 
+	* gtk/gtkfilesystemunix.c: (get_icon_for_directory),
+	(gtk_file_system_unix_render_icon):
+	Use better icons for home and desktop.
+
+2004-03-08  Anders Carlsson  <andersca@gnome.org>
+
 	* gtk/gtkfilechooserentry.c:
 	(_gtk_file_chooser_entry_set_base_folder):
 	Set the base folder path in the entry.
